--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        
     },
     "devDependencies": {
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "axios": "^1.6.4",
+        "laravel-vite-plugin": "^1.0.0",
+        "lodash": "^4.17.19",
+        "sass": "^1.77.2",
+        "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.6",
+        "bootstrap": "^5.2.2"
     }
 }
